@@ -4,24 +4,23 @@ import static com.google.common.truth.Truth.assertThat;
 
 import com.google.adk.agents.BaseAgent;
 import com.google.adk.agents.InvocationContext;
-import com.google.adk.agents.RunConfig;
 import com.google.adk.artifacts.InMemoryArtifactService;
 import com.google.adk.events.Event;
-import com.google.adk.memory.BaseMemoryService;
 import com.google.adk.plugins.PluginManager;
 import com.google.adk.sessions.InMemorySessionService;
 import com.google.adk.sessions.Session;
 import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import com.google.genai.types.Content;
 import com.google.genai.types.FunctionCall;
 import com.google.genai.types.FunctionResponse;
 import com.google.genai.types.Part;
 import io.a2a.spec.DataPart;
 import io.a2a.spec.Message;
+import io.a2a.spec.TextPart;
 import io.reactivex.rxjava3.core.Flowable;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Map;
 import java.util.Optional;
 import org.junit.Test;
 import org.junit.runner.RunWith;
@@ -47,7 +46,7 @@ public final class EventConverterTest {
                 FunctionCall.builder()
                     .name("roll_die")
                     .id("adk-call-1")
-                    .args(Map.of("sides", 6))
+                    .args(ImmutableMap.of("sides", 6))
                     .build())
             .build();
     Event callEvent =
@@ -67,7 +66,7 @@ public final class EventConverterTest {
                 FunctionResponse.builder()
                     .name("roll_die")
                     .id("adk-call-1")
-                    .response(Map.of("result", 3))
+                    .response(ImmutableMap.of("result", 3))
                     .build())
             .build();
     Event responseEvent =
@@ -86,19 +85,15 @@ public final class EventConverterTest {
         Session.builder("session-1").appName("demo").userId("user").events(events).build();
 
     InvocationContext context =
-        new InvocationContext(
-            new InMemorySessionService(),
-            new InMemoryArtifactService(),
-            (BaseMemoryService) null,
-            new PluginManager(),
-            Optional.empty(),
-            Optional.empty(),
-            "invocation-1",
-            new TestAgent(),
-            session,
-            Optional.empty(),
-            RunConfig.builder().build(),
-            false);
+        InvocationContext.builder()
+            .sessionService(new InMemorySessionService())
+            .artifactService(new InMemoryArtifactService())
+            .pluginManager(new PluginManager())
+            .invocationId("invocation-1")
+            .agent(new TestAgent())
+            .session(session)
+            .endInvocation(false)
+            .build();
 
     // Act
     Optional<Message> maybeMessage = EventConverter.convertEventsToA2AMessage(context);
@@ -107,7 +102,7 @@ public final class EventConverterTest {
     assertThat(maybeMessage).isPresent();
     Message message = maybeMessage.get();
     assertThat(message.getParts()).hasSize(3);
-    assertThat(message.getParts().get(0)).isInstanceOf(io.a2a.spec.TextPart.class);
+    assertThat(message.getParts().get(0)).isInstanceOf(TextPart.class);
     assertThat(message.getParts().get(1)).isInstanceOf(DataPart.class);
     assertThat(message.getParts().get(2)).isInstanceOf(DataPart.class);
 
@@ -116,14 +111,14 @@ public final class EventConverterTest {
         .isEqualTo(PartConverter.A2A_DATA_PART_METADATA_TYPE_FUNCTION_CALL);
     assertThat(callDataPart.getData()).containsEntry("name", "roll_die");
     assertThat(callDataPart.getData()).containsEntry("id", "adk-call-1");
-    assertThat(callDataPart.getData()).containsEntry("args", Map.of("sides", 6));
+    assertThat(callDataPart.getData()).containsEntry("args", ImmutableMap.of("sides", 6));
 
     DataPart responseDataPart = (DataPart) message.getParts().get(2);
     assertThat(responseDataPart.getMetadata().get(PartConverter.A2A_DATA_PART_METADATA_TYPE_KEY))
         .isEqualTo(PartConverter.A2A_DATA_PART_METADATA_TYPE_FUNCTION_RESPONSE);
     assertThat(responseDataPart.getData()).containsEntry("name", "roll_die");
     assertThat(responseDataPart.getData()).containsEntry("id", "adk-call-1");
-    assertThat(responseDataPart.getData()).containsEntry("response", Map.of("result", 3));
+    assertThat(responseDataPart.getData()).containsEntry("response", ImmutableMap.of("result", 3));
   }
 
   private static final class TestAgent extends BaseAgent {
